<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myschool.tp2.LoginActivity"
    android:id="@+id/act_login">

    <TextView android:text="@string/act_login_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_login_email"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/act_sign_in_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_login_password"
        android:layout_below="@+id/act_login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/act_sign_in_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_button"
        android:id="@+id/act_login_button"
        android:layout_below="@+id/act_login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="login" />

</RelativeLayout>
